@@ -1,5 +1,6 @@
 == master
 
+* Add support for looking up enumerators by their symbol equivalent
 * Fix incompatibility with Ruby 1.9
 * Fix equality / xml serialization not working for non-string enumerators
 * Improve compatibility with the stable branch of Rails 2.3 [Michael Schuerig]
